# xpu-attention

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: unit-tests.yml
att/: README.md  pyproject.toml
att/src/att/: attention.py
att/tests/: __init__.py  test_attention.py
