[project]
name = "att"
version = "0.1.0"
description = ""
authors = [
    {name = "Iain-S",email = "25081046+Iain-S@users.noreply.github.com "}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "att", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
