[project]
name = "att"
version = "0.1.0"
description = ""
authors = [
    {name = "Iain-S",email = "25081046+Iain-S@users.noreply.github.com "}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch>=2.8.0,<3.0.0",
    "numpy>=2.3.2,<3.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
